--- a/.gitmodules
+++ b/.gitmodules
@@ -351,3 +351,6 @@
 	url = https://github.com/rtkconnectivity/ot-realtek.git
 	branch = matter_support
 	platforms = realtek
+[submodule "third_party/libtrustymatter/repo"]
+	path = third_party/libtrustymatter/repo
+	url = https://github.com/nxp-imx/libtrustymatter
