--- a/src/platform/silabs/efr32/BUILD.gn
+++ b/src/platform/silabs/efr32/BUILD.gn
@@ -104,6 +104,15 @@ static_library("efr32") {
       "${silabs_platform_dir}/multi-ota/OTATlvProcessor.cpp",
       "${silabs_platform_dir}/multi-ota/OTATlvProcessor.h",
     ]
+
+    if (chip_enable_wifi) {
+      sources += [
+        "${silabs_platform_dir}/multi-ota/SiWx917/OTAFirmwareProcessor917.cpp",
+        "${silabs_platform_dir}/multi-ota/SiWx917/OTAFirmwareProcessor917.h",
+        "${silabs_platform_dir}/multi-ota/SiWx917/OTAHooks917.cpp",
+      ]
+    }
+
   } else if (chip_enable_ota_requestor) {
     sources += [
       "${silabs_platform_dir}/OTAImageProcessorImpl.h",
