--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -19,6 +19,8 @@ not_automated:
       reason: It has no CI execution block, is not executed in CI
     - name: TC_CNET_4_22.py
       reason: It has no CI execution block, is not executed in CI
+    - name: TC_CNET_4_23.py
+      reason: It has no CI execution block, is not executed in CI
     - name: TC_DGGEN_3_2.py
       reason:
           src/python_testing/test_testing/test_TC_DGGEN_3_2.py is the Unit test
