--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,13 +18,14 @@ on:
     push:
         branches:
             - master
-            - 'v*-branch'
+            - "v*-branch"
     pull_request:
     merge_group:
     workflow_dispatch:
 
 concurrency:
-    group: ${{ github.ref }}-${{ github.workflow }}-${{ (github.event_name ==
+    group:
+        ${{ github.ref }}-${{ github.workflow }}-${{ (github.event_name ==
         'pull_request' && github.event.number) || (github.event_name ==
         'workflow_dispatch' && github.run_number) || github.sha }}
     cancel-in-progress: true
@@ -43,7 +44,9 @@ jobs:
         env:
             BUILD_VARIANT: ${{matrix.build_variant}}
             CHIP_TOOL_VARIANT: ${{matrix.chip_tool}}
-            TSAN_OPTIONS: "halt_on_error=1 suppressions=scripts/tests/chiptest/tsan-linux-suppressions.txt"
+            TSAN_OPTIONS:
+                "halt_on_error=1
+                suppressions=scripts/tests/chiptest/tsan-linux-suppressions.txt"
             LSAN_OPTIONS: detect_leaks=1
 
         if: github.actor != 'restyled-io[bot]'
@@ -51,7 +54,8 @@ jobs:
 
         container:
             image: ghcr.io/project-chip/chip-build:140
-            options: --privileged --sysctl "net.ipv6.conf.all.disable_ipv6=0
+            options:
+                --privileged --sysctl "net.ipv6.conf.all.disable_ipv6=0
                 net.ipv4.conf.all.forwarding=1 net.ipv6.conf.all.forwarding=1"
 
         steps:
@@ -69,9 +73,12 @@ jobs:
             - name: Checkout submodules & Bootstrap
               uses: ./.github/actions/checkout-submodules-and-bootstrap
               with:
-                platform: linux
-                bootstrap-log-name: bootstrap-logs-linux-${{ matrix.build_variant }}${{ matrix.chip_tool }}
-            - name: Try to ensure the directories for core dumping exist and we
+                  platform: linux
+                  bootstrap-log-name:
+                      bootstrap-logs-linux-${{ matrix.build_variant }}${{
+                      matrix.chip_tool }}
+            - name:
+                  Try to ensure the directories for core dumping exist and we
                   can write them.
               run: |
                   mkdir /tmp/cores || true
@@ -253,11 +260,14 @@ jobs:
                         --target linux-x64-microwave-oven-${BUILD_VARIANT} \
                         --target linux-x64-rvc-${BUILD_VARIANT} \
                         --target linux-x64-network-manager-${BUILD_VARIANT} \
+                        --target linux-x64-closure-${BUILD_VARIANT} \
                         build \
                         --copy-artifacts-to objdir-clone \
                      "
 
-            - name: Run Tests using the python parser sending commands to chip-tool
+            - name:
+                  Run Tests using the python parser sending commands to
+                  chip-tool
               run: |
                   ./scripts/run_in_build_env.sh \
                   "./scripts/tests/run_test_suite.py \
@@ -276,9 +286,12 @@ jobs:
                      --microwave-oven-app ./out/linux-x64-microwave-oven-${BUILD_VARIANT}/chip-microwave-oven-app \
                      --rvc-app ./out/linux-x64-rvc-${BUILD_VARIANT}/chip-rvc-app \
                      --network-manager-app ./out/linux-x64-network-manager-${BUILD_VARIANT}/matter-network-manager-app \
+                     --closure-app ./out/linux-x64-closure-${BUILD_VARIANT}/closure-app \
                   "
 
-            - name: Run purposeful failure tests using the python parser sending commands to chip-tool
+            - name:
+                  Run purposeful failure tests using the python parser sending
+                  commands to chip-tool
               run: |
                   ./scripts/run_in_build_env.sh \
                   "./scripts/tests/run_test_suite.py \
@@ -318,6 +331,7 @@ jobs:
                      --microwave-oven-app ./out/linux-x64-microwave-oven-${BUILD_VARIANT}/chip-microwave-oven-app \
                      --rvc-app ./out/linux-x64-rvc-${BUILD_VARIANT}/chip-rvc-app \
                      --network-manager-app ./out/linux-x64-network-manager-${BUILD_VARIANT}/matter-network-manager-app \
+                     --closure-app ./out/linux-x64-closure-${BUILD_VARIANT}/closure-app \
                   "
             - name: Run Tests using chip-repl (including slow)
               if: github.event_name == 'push'
@@ -338,12 +352,15 @@ jobs:
                      --microwave-oven-app ./out/linux-x64-microwave-oven-${BUILD_VARIANT}/chip-microwave-oven-app \
                      --rvc-app ./out/linux-x64-rvc-${BUILD_VARIANT}/chip-rvc-app \
                      --network-manager-app ./out/linux-x64-network-manager-${BUILD_VARIANT}/matter-network-manager-app \
+                     --closure-app ./out/linux-x64-closure-${BUILD_VARIANT}/closure-app \
                   "
             - name: Uploading core files
               uses: actions/upload-artifact@v4
               if: ${{ failure() && !env.ACT }}
               with:
-                  name: crash-core-linux-${{ matrix.build_variant }}${{ matrix.chip_tool }}
+                  name:
+                      crash-core-linux-${{ matrix.build_variant }}${{
+                      matrix.chip_tool }}
                   path: /tmp/cores/
                   # Cores are big; don't hold on to them too long.
                   retention-days: 5
@@ -351,7 +368,9 @@ jobs:
               uses: actions/upload-artifact@v4
               if: ${{ failure() && !env.ACT }}
               with:
-                  name: crash-objdir-linux-${{ matrix.build_variant }}${{ matrix.chip_tool }}
+                  name:
+                      crash-objdir-linux-${{ matrix.build_variant }}${{
+                      matrix.chip_tool }}
                   path: objdir-clone/
                   # objdirs are big; don't hold on to them too long.
                   retention-days: 5
@@ -361,13 +380,16 @@ jobs:
 
         strategy:
             matrix:
-                build_variant: [no-ble-no-shell-asan-clang, no-ble-no-shell-tsan-clang]
+                build_variant:
+                    [no-ble-no-shell-asan-clang, no-ble-no-shell-tsan-clang]
                 chip_tool: [""]
         env:
             BUILD_VARIANT: ${{matrix.build_variant}}
             CHIP_TOOL_VARIANT: ${{matrix.chip_tool}}
             TSAN_OPTIONS: "halt_on_error=1"
-            LSAN_OPTIONS: detect_leaks=1 suppressions=scripts/tests/chiptest/lsan-mac-suppressions.txt
+            LSAN_OPTIONS:
+                detect_leaks=1
+                suppressions=scripts/tests/chiptest/lsan-mac-suppressions.txt
 
         if: github.actor != 'restyled-io[bot]'
         runs-on: macos-13
@@ -388,9 +410,10 @@ jobs:
             - name: Checkout submodules & Bootstrap
               uses: ./.github/actions/checkout-submodules-and-bootstrap
               with:
-                platform: darwin
-                bootstrap-log-name: bootstrap-logs-darwin-${{ matrix.build_variant }}${{ matrix.chip_tool }}
-
+                  platform: darwin
+                  bootstrap-log-name:
+                      bootstrap-logs-darwin-${{ matrix.build_variant }}${{
+                      matrix.chip_tool }}
 
             - name: Build Apps
               run: |
@@ -411,7 +434,9 @@ jobs:
                         --copy-artifacts-to objdir-clone \
                      "
 
-            - name: Run Tests using the python parser sending commands to chip-tool
+            - name:
+                  Run Tests using the python parser sending commands to
+                  chip-tool
               run: |
                   ./scripts/run_in_build_env.sh \
                   "./scripts/tests/run_test_suite.py \
@@ -433,7 +458,9 @@ jobs:
                      --network-manager-app ./out/darwin-x64-network-manager-${BUILD_VARIANT}/matter-network-manager-app \
                   "
 
-            - name: Run purposeful failure tests using the python parser sending commands to chip-tool
+            - name:
+                  Run purposeful failure tests using the python parser sending
+                  commands to chip-tool
               run: |
                   ./scripts/run_in_build_env.sh \
                   "./scripts/tests/run_test_suite.py \
@@ -452,7 +479,9 @@ jobs:
               uses: actions/upload-artifact@v4
               if: ${{ failure() && !env.ACT }}
               with:
-                  name: crash-core-darwin-${{ matrix.build_variant }}${{ matrix.chip_tool }}
+                  name:
+                      crash-core-darwin-${{ matrix.build_variant }}${{
+                      matrix.chip_tool }}
                   path: /cores/
                   # Cores are big; don't hold on to them too long.
                   retention-days: 5
@@ -460,13 +489,17 @@ jobs:
               uses: actions/upload-artifact@v4
               if: ${{ failure() && !env.ACT }}
               with:
-                  name: crash-log-darwin-${{ matrix.build_variant }}${{ matrix.chip_tool }}
+                  name:
+                      crash-log-darwin-${{ matrix.build_variant }}${{
+                      matrix.chip_tool }}
                   path: ~/Library/Logs/DiagnosticReports/
             - name: Uploading objdir for debugging
               uses: actions/upload-artifact@v4
               if: ${{ failure() && !env.ACT }}
               with:
-                  name: crash-objdir-darwin-${{ matrix.build_variant }}${{ matrix.chip_tool }}
+                  name:
+                      crash-objdir-darwin-${{ matrix.build_variant }}${{
+                      matrix.chip_tool }}
                   path: objdir-clone/
                   # objdirs are big; don't hold on to them too long.
                   retention-days: 5
@@ -477,11 +510,13 @@ jobs:
         if: github.actor != 'restyled-io[bot]'
 
         strategy:
-          matrix:
-            build_variant: [ ipv6only-no-ble-no-wifi]
+            matrix:
+                build_variant: [ipv6only-no-ble-no-wifi]
 
         env:
-            TSAN_OPTIONS: "halt_on_error=1 suppressions=scripts/tests/chiptest/tsan-linux-suppressions.txt"
+            TSAN_OPTIONS:
+                "halt_on_error=1
+                suppressions=scripts/tests/chiptest/tsan-linux-suppressions.txt"
             BUILD_VARIANT: ${{matrix.build_variant}}
 
         runs-on: ubuntu-latest
@@ -489,10 +524,9 @@ jobs:
         container:
             image: ghcr.io/project-chip/chip-build:140
             options:
-               --privileged
-               --sysctl net.ipv6.conf.all.disable_ipv6=0
-               --sysctl net.ipv4.conf.all.forwarding=0
-               --sysctl net.ipv6.conf.all.forwarding=0
+                --privileged --sysctl net.ipv6.conf.all.disable_ipv6=0 --sysctl
+                net.ipv4.conf.all.forwarding=0 --sysctl
+                net.ipv6.conf.all.forwarding=0
 
         steps:
             - name: Checkout
@@ -500,9 +534,12 @@ jobs:
             - name: Checkout submodules & Bootstrap
               uses: ./.github/actions/checkout-submodules-and-bootstrap
               with:
-                platform: linux
-                bootstrap-log-name: bootstrap-logs-linux-${{ matrix.build_variant }}${{ matrix.chip_tool }}
-            - name: Try to ensure the directories for core dumping exist and we
+                  platform: linux
+                  bootstrap-log-name:
+                      bootstrap-logs-linux-${{ matrix.build_variant }}${{
+                      matrix.chip_tool }}
+            - name:
+                  Try to ensure the directories for core dumping exist and we
                   can write them.
               run: |
                   mkdir /tmp/cores || true
@@ -561,6 +598,7 @@ jobs:
                   echo "FABRIC_BRIDGE_APP: out/linux-x64-fabric-bridge-rpc-${BUILD_VARIANT}-clang/fabric-bridge-app" >> /tmp/test_env.yaml
                   echo "FABRIC_SYNC_APP: out/linux-x64-fabric-sync-${BUILD_VARIANT}-clang/fabric-sync" >> /tmp/test_env.yaml
                   echo "LIGHTING_APP_NO_UNIQUE_ID: out/linux-x64-light-data-model-no-unique-id-${BUILD_VARIANT}-clang/chip-lighting-app" >> /tmp/test_env.yaml
+                  echo "CLOSURE_APP: out/linux-x64-closure-${BUILD_VARIANT}-clang/closure-app" >> /tmp/test_env.yaml
                   echo "TERMS_AND_CONDITIONS_APP: out/linux-x64-terms-and-conditions/chip-terms-and-conditions-app" >> /tmp/test_env.yaml
                   echo "TRACE_APP: out/trace_data/app-{SCRIPT_BASE_NAME}" >> /tmp/test_env.yaml
                   echo "TRACE_TEST_JSON: out/trace_data/test-{SCRIPT_BASE_NAME}" >> /tmp/test_env.yaml
@@ -655,8 +693,10 @@ jobs:
             - name: Checkout submodules & Bootstrap
               uses: ./.github/actions/checkout-submodules-and-bootstrap
               with:
-                platform: darwin
-                bootstrap-log-name: bootstrap-logs-darwin-${{ matrix.build_variant }}${{ matrix.chip_tool }}
+                  platform: darwin
+                  bootstrap-log-name:
+                      bootstrap-logs-darwin-${{ matrix.build_variant }}${{
+                      matrix.chip_tool }}
 
             - name: Build Python REPL and example apps
               run: |
