--- a/.github/workflows/check-data-model-directory-updates.yaml
+++ b/.github/workflows/check-data-model-directory-updates.yaml
@@ -28,18 +28,31 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 2
+      - name: Skip check for uncommitted changes due to label
+        if: (contains(github.event.pull_request.labels.*.name, 'data-model-file-structural-change-dm-tt-use-only'))
+        run: |
+          echo skipping data model checks due to label
+          exit 0
       - name: Check for changes to master data_model directory without a SHA update
+        if: (!contains(github.event.pull_request.labels.*.name, 'data-model-file-structural-change-dm-tt-use-only'))
         run: |
           python3 scripts/dm_xml_ci_change_enforcement.py data_model/master
       - name: Check for changes to 1.3 data_model directory without a SHA update
+        if: (!contains(github.event.pull_request.labels.*.name, 'data-model-file-structural-change-dm-tt-use-only'))
         run: |
           python3 scripts/dm_xml_ci_change_enforcement.py data_model/1.3
       - name: Check for changes to 1.4 data_model directory without a SHA update
+        if: (!contains(github.event.pull_request.labels.*.name, 'data-model-file-structural-change-dm-tt-use-only'))
         run: |
           python3 scripts/dm_xml_ci_change_enforcement.py data_model/1.4
       - name: Check for changes to 1.4.1 data_model directory without a SHA update
+        if: (!contains(github.event.pull_request.labels.*.name, 'data-model-file-structural-change-dm-tt-use-only'))
         run: |
           python3 scripts/dm_xml_ci_change_enforcement.py data_model/1.4.1
+      - name: Check for changes to the 1.4.2 data_model directory without a SHA update
+        if: (!contains(github.event.pull_request.labels.*.name, 'data-model-file-structural-change-dm-tt-use-only'))
+        run: |
+          python3 scripts/dm_xml_ci_change_enforcement.py data_model/1.4.2
 
   check-data_model-build-file:
     name: Check that all data_model files are listed in the data_model_xmls.gni build file
@@ -58,6 +71,6 @@ jobs:
         run: out/venv/bin/python3 src/python_testing/matter_testing_infrastructure/generate_data_model_xmls_gni.py
       - name: Ensure git works in current working directory
         run: git config --global --add safe.directory `pwd`
-      - name: Check for uncommited changes
+      - name: Check for uncommitted changes
         run: |
           git diff --exit-code HEAD -- src/python_testing/matter_testing_infrastructure/data_model_xmls.gni
