--- a/src/app/clusters/wifi-network-diagnostics-server/tests/BUILD.gn
+++ b/src/app/clusters/wifi-network-diagnostics-server/tests/BUILD.gn
@@ -32,5 +32,6 @@ chip_test_suite("tests") {
     "${chip_root}/src/app/clusters/wifi-network-diagnostics-server",
     "${chip_root}/src/lib/core:string-builder-adapters",
     "${chip_root}/src/lib/support",
+    "${chip_root}/src/protocols",
   ]
 }
