--- a/examples/lighting-app/silabs/zephyr/prj_release.conf
+++ b/examples/lighting-app/silabs/zephyr/prj_release.conf
@@ -1,5 +1,5 @@
 #
-#    Copyright (c) 2022 Project CHIP Authors
+#    Copyright (c) 2025 Project CHIP Authors
 #
 #    Licensed under the Apache License, Version 2.0 (the "License");
 #    you may not use this file except in compliance with the License.
@@ -20,7 +20,7 @@
 
 # Enable CHIP
 CONFIG_CHIP=y
-CONFIG_CHIP_PROJECT_CONFIG="include/CHIPProjectConfig.h"
+CONFIG_CHIP_PROJECT_CONFIG="../include/CHIPProjectConfig.h"
 # 32773 == 0x8005 (example lighting-app)
 CONFIG_CHIP_DEVICE_PRODUCT_ID=32773
 CONFIG_STD_CPP17=y
