--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -104,26 +104,10 @@ not_automated:
     - name: TC_AVSUMTestBase.py
       reason:
           Shared code for Camera AV Settings (TC_AVSUM*), not a standalone test.
-    - name: TC_WEBRTC_1_1.py
-      reason:
-          Depends on Python WebRTC bindings. Will be enabled once local tests
-          are fully verified.
-    - name: TC_WEBRTC_1_2.py
-      reason:
-          Depends on Python WebRTC bindings. Will be enabled once local tests
-          are fully verified.
-    - name: TC_WEBRTC_1_3.py
-      reason:
-          Depends on Python WebRTC bindings. Will be enabled once local tests
-          are fully verified.
-    - name: TC_WEBRTC_1_4.py
-      reason:
-          Depends on Python WebRTC bindings. Will be enabled once local tests
-          are fully verified.
     - name: TC_WEBRTC_1_5.py
       reason:
-          Depends on Python WebRTC bindings. Will be enabled once local tests
-          are fully verified.
+          Depends on Python WebRTC bindings and Camera App. Will be enabled once
+          local tests are fully verified.
     - name: TC_WEBRTC_Utils.py
       reason: Helper methods for WebRTC TCs, not a standalone test.
     - name: TC_CHIMETestBase.py
