--- a/integrations/docker/images/stage-2/chip-build-tizen/Dockerfile
+++ b/integrations/docker/images/stage-2/chip-build-tizen/Dockerfile
@@ -26,13 +26,15 @@ ENV TIZEN_SDK_ROOT=/opt/tizen-sdk
 COPY tizen-sdk-installer $TIZEN_SDK_ROOT/files/installer
 RUN set -x \
     && bash $TIZEN_SDK_ROOT/files/installer/install.sh \
+    --verbose \
     --cpu arm,arm64 \
     --tizen-sdk-path $TIZEN_SDK_ROOT \
     --tizen-sdk-data-path /home/ubuntu/tizen-sdk-data \
     --tizen-version $TIZEN_VERSION  \
-    --fetch-sdk-pkgs \
-    --install-sdk-pkgs \
+    --purge-pkg-cache \
+    --pkg-cache-path /tmp/tizen-pkg/$TIZEN_VERSION \
     --override-secret-tool \
+    && rm -rf /tmp/tizen-pkg \
     && : # last line
 
 # ------------------------------------------------------------------------------
