--- a/src/python_testing/matter_testing_infrastructure/BUILD.gn
+++ b/src/python_testing/matter_testing_infrastructure/BUILD.gn
@@ -47,6 +47,7 @@ pw_python_package("chip-testing-module") {
     "chip/testing/global_stash.py",
     "chip/testing/matchers.py",
     "chip/testing/matter_asserts.py",
+    "chip/testing/matter_test_config.py",
     "chip/testing/matter_testing.py",
     "chip/testing/metadata.py",
     "chip/testing/pics.py",
