--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -114,7 +114,10 @@ if (chip_build_tests) {
       # Disabled from "one single binary" since the "mocks" contain duplicate sybmols
       # with ember
       # Disabled on EFR32 since "include <random>" fails with `::fabs` not defined
-      tests += [ "${chip_root}/src/data-model-providers/codegen/tests" ]
+      tests += [
+        "${chip_root}/src/data-model-providers/codedriven/tests",
+        "${chip_root}/src/data-model-providers/codegen/tests"
+      ]
     }
 
     if (chip_device_platform != "efr32") {
