--- a/examples/camera-controller/BUILD.gn
+++ b/examples/camera-controller/BUILD.gn
@@ -19,7 +19,6 @@ import("//build_overrides/editline.gni")
 import("${build_root}/config/compiler/compiler.gni")
 import("${chip_root}/build/chip/tools.gni")
 import("${chip_root}/examples/camera-controller/camera-controller.gni")
-import("${chip_root}/src/data-model-providers/codegen/model.gni")
 import("${chip_root}/src/lib/core/core.gni")
 
 assert(chip_build_tools)
@@ -54,12 +53,14 @@ config("config") {
 
 static_library("camera-controller-utils") {
   sources = [
-    "${chip_root}/src/app/clusters/webrtc-transport-requestor-server/webrtc-transport-requestor-server.cpp",
-    "${chip_root}/src/app/clusters/webrtc-transport-requestor-server/webrtc-transport-requestor-server.h",
+    "${chip_root}/src/app/clusters/webrtc-transport-requestor-server/webrtc-transport-requestor-cluster.cpp",
+    "${chip_root}/src/app/clusters/webrtc-transport-requestor-server/webrtc-transport-requestor-cluster.h",
     "${chip_root}/src/controller/ExamplePersistentStorage.cpp",
     "${chip_root}/src/controller/ExamplePersistentStorage.h",
     "${chip_root}/zzz_generated/chip-tool/zap-generated/cluster/ComplexArgumentParser.cpp",
     "${chip_root}/zzz_generated/chip-tool/zap-generated/cluster/logging/DataModelLogger.cpp",
+    "access-control/AccessControl.cpp",
+    "access-control/AccessControl.h",
     "commands/clusters/ModelCommand.cpp",
     "commands/clusters/ModelCommand.h",
     "commands/clusters/ReportCommand.cpp",
@@ -114,6 +115,7 @@ static_library("camera-controller-utils") {
     "${chip_root}/src/app:required-privileges",
     "${chip_root}/src/app/server",
     "${chip_root}/src/app/tests/suites/commands/interaction_model",
+    "${chip_root}/src/controller/data_model",
     "${chip_root}/src/credentials:file_attestation_trust_store",
     "${chip_root}/src/lib",
     "${chip_root}/src/lib/core:types",
@@ -122,19 +124,6 @@ static_library("camera-controller-utils") {
     "${chip_root}/third_party/inipp",
     "${chip_root}/third_party/jsoncpp",
   ]
-
-  defines = [ "CHIP_CONFIG_SKIP_APP_SPECIFIC_GENERATED_HEADER_INCLUDES=1" ]
-
-  deps += [ "${chip_root}/src/controller:nodatamodel" ]
-
-  # Temporary dependency: InteractionModelEngine NEEDS a codegen data model instance
-  # defined and application is supposed to provide it. This adds the sources
-  # in the same way "data_model" implementations do
-  #
-  # DynamicDispatcher in src/app:interaction-model implements the actual required
-  # ember callbacks in this case...
-  sources += codegen_data_model_SOURCES
-  public_deps += codegen_data_model_PUBLIC_DEPS
 
   public_configs = [ ":config" ]
 
