--- a/integrations/cloudbuild/smoke-test.yaml
+++ b/integrations/cloudbuild/smoke-test.yaml
@@ -44,7 +44,8 @@ steps:
       volumes:
           - name: pwenv
             path: /pwenv
-    - name: "ghcr.io/project-chip/chip-build-vscode:150"
+    - name: "ghcr.io/project-chip/chip-build-vscode:140"
+      # TODO: use more recent image once NRF builds are fixed
       id: NRFConnect
       env:
           - PW_ENVIRONMENT_ROOT=/pwenv
