--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -65,6 +65,8 @@ not_automated:
       reason: Shared code for TC_EGC, not a standalone test
     - name: TC_SEPRTestBase.py
       reason: Shared code for TC_SEPR, not a standalone test
+    - name: TC_SETRF_TestBase.py
+      reason: Shared code for TC_SETRF, not a standalone test
     - name: TestConformanceTest.py
       reason:
           Unit test of the conformance test (TC_DeviceConformance) - does not
