--- a/src/app/data-model-provider/BUILD.gn
+++ b/src/app/data-model-provider/BUILD.gn
@@ -24,6 +24,16 @@ source_set("metadata") {
   ]
 }
 
+source_set("core") {
+  public = [ "OperationTypes.h" ]
+
+  public_deps = [
+    "${chip_root}/src/access:types",
+    "${chip_root}/src/app:paths",
+    "${chip_root}/src/app/data-model",
+  ]
+}
+
 source_set("data-model-provider") {
   sources = [
     "ActionContext.h",
@@ -33,7 +43,6 @@ source_set("data-model-provider") {
     "EventsGenerator.h",
     "MetadataLookup.cpp",
     "MetadataLookup.h",
-    "OperationTypes.h",
     "Provider.h",
     "ProviderChangeListener.h",
     "ProviderMetadataTree.cpp",
@@ -41,6 +50,7 @@ source_set("data-model-provider") {
   ]
 
   public_deps = [
+    ":core",
     ":metadata",
     "${chip_root}/src/app:attribute-access",
     "${chip_root}/src/app:command-handler",
