--- a/integrations/docker/images/chip-cert-bins/Dockerfile
+++ b/integrations/docker/images/chip-cert-bins/Dockerfile
@@ -69,7 +69,6 @@ RUN set -x \
     libnspr4-dev \
     libpango1.0-dev \
     libpixman-1-dev \
-    libpcsclite1 \
     libreadline-dev \
     libssl-dev \
     libtool \
@@ -82,7 +81,6 @@ RUN set -x \
     ninja-build \
     openjdk-8-jdk \
     pkg-config \
-    pcscd \
     python3 \
     python3-dev \
     python3-pip \
@@ -274,7 +272,7 @@ FROM ubuntu:24.04
 ENV TZ=Etc/UTC
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt-get update -y
-RUN apt-get install -y libssl-dev libdbus-1-dev libglib2.0-dev libavahi-client-dev avahi-utils iproute2 libcairo2-dev libgirepository1.0-dev python3-pip
+RUN apt-get install -y libssl-dev libdbus-1-dev libglib2.0-dev libavahi-client-dev avahi-utils iproute2 libcairo2-dev libgirepository1.0-dev python3-pip libpcsclite1 pcscd
 WORKDIR /root/
 COPY --from=chip-build-cert-bins /root/.sdk-sha-version .sdk-sha-version
 RUN mkdir apps
@@ -349,3 +347,6 @@ RUN pip install --break-system-packages --no-cache-dir \
 RUN mkdir -p credentials/test/revoked-attestation-certificates
 COPY --from=chip-build-cert-bins /root/connectedhomeip/credentials/test/revoked-attestation-certificates/dac-provider-test-vectors credentials/test/revoked-attestation-certificates/dac-provider-test-vectors
 COPY --from=chip-build-cert-bins /root/connectedhomeip/credentials/test/revoked-attestation-certificates/revocation-sets credentials/test/revoked-attestation-certificates/revocation-sets
+
+# Set default command to run pcscd with --disable-polkit
+CMD ["pcscd", "--disable-polkit"]
